Fixed issues due to invalid naming on the drawables and inappropriate adding of flags to arrays.xml

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -43,7 +43,7 @@
         <item>Congo, Democratic Republic of the</item>
         <item>Congo, Republic of</item>
         <item>Costa Rica</item>
-        <item>Côte d'Ivoire</item>
+        <item>Côte d\'Ivoire</item>
         <item>Croatia</item>
         <item>Cuba</item>
         <item>Cyprus</item>
@@ -368,7 +368,7 @@
         <item>Tanzanian shilling</item>
         <item>baht</item>
         <item>CFA Franc</item>
-        <item>Pa'anga</item>
+        <item>Pa\'anga</item>
         <item>Trinidad and Tobago dollar</item>
         <item>Tunisian dinar</item>
         <item>Turkish lira (YTL)</item>
@@ -393,197 +393,197 @@
 
     <!-- The flags representing each country -->
     <string-array name="flags">
-        <drawable>afghanistan</drawable>
-        <drawable>albania</drawable>
-        <drawable>algeria</drawable>
-        <drawable>andorra</drawable>
-        <drawable>angola</drawable>
-        <drawable>antigua-barbuda</drawable>
-        <drawable>argentina</drawable>
-        <drawable>armenia</drawable>
-        <drawable>australia</drawable>
-        <drawable>austria</drawable>
-        <drawable>azerbaijan</drawable>
-        <drawable>bahamas</drawable>
-        <drawable>bahrain</drawable>
-        <drawable>bangladesh</drawable>
-        <drawable>barbados</drawable>
-        <drawable>belarus</drawable>
-        <drawable>belgium</drawable>
-        <drawable>belize</drawable>
-        <drawable>benin</drawable>
-        <drawable>bhutan</drawable>
-        <drawable>bolivia</drawable>
-        <drawable>bosnia-herzegovina</drawable>
-        <drawable>botswana</drawable>
-        <drawable>brazil</drawable>
-        <drawable>brunei</drawable>
-        <drawable>bulgaria</drawable>
-        <drawable>burkina-faso</drawable>
-        <drawable>burundi</drawable>
-        <drawable>cambodia</drawable>
-        <drawable>cameroon</drawable>
-        <drawable>canada</drawable>
-        <drawable>cape-verde</drawable>
-        <drawable>central-african-republic</drawable>
-        <drawable>chad</drawable>
-        <drawable>chile</drawable>
-        <drawable>china</drawable>
-        <drawable>colombia</drawable>
-        <drawable>comoros</drawable>
-        <drawable>congo-brazzaville</drawable>
-        <drawable>congo-kinshasa-zaire</drawable>
-        <drawable>costa-rica</drawable>
-        <drawable>cote-d-ivoire</drawable>
-        <drawable>croatia</drawable>
-        <drawable>cuba</drawable>
-        <drawable>cyprus</drawable>
-        <drawable>czech-republic</drawable>
-        <drawable>denmark</drawable>
-        <drawable>djibouti</drawable>
-        <drawable>dominica</drawable>
-        <drawable>dominican-republic</drawable>
-        <drawable>ecuador</drawable>
-        <drawable>egypt</drawable>
-        <drawable>el-salvador</drawable>
-        <drawable>equatorial-guinea</drawable>
-        <drawable>eritrea</drawable>
-        <drawable>estonia</drawable>
-        <drawable>ethiopia</drawable>
-        <drawable>fiji</drawable>
-        <drawable>finland</drawable>
-        <drawable>france</drawable>
-        <drawable>gabon</drawable>
-        <drawable>gambia</drawable>
-        <drawable>georgia</drawable>
-        <drawable>germany</drawable>
-        <drawable>ghana</drawable>
-        <drawable>greece</drawable>
-        <drawable>grenada</drawable>
-        <drawable>guatemala</drawable>
-        <drawable>guinea</drawable>
-        <drawable>guinea-bissau</drawable>
-        <drawable>guyana</drawable>
-        <drawable>haiti</drawable>
-        <drawable>honduras</drawable>
-        <drawable>hungary</drawable>
-        <drawable>iceland</drawable>
-        <drawable>india</drawable>
-        <drawable>indonezia</drawable>
-        <drawable>iran</drawable>
-        <drawable>iraq</drawable>
-        <drawable>ireland</drawable>
-        <drawable>israel</drawable>
-        <drawable>italy</drawable>
-        <drawable>jamaica</drawable>
-        <drawable>japan</drawable>
-        <drawable>jordan</drawable>
-        <drawable>kazakhstan</drawable>
-        <drawable>kenya</drawable>
-        <drawable>kiribati</drawable>
-        <drawable>kuwait</drawable>
-        <drawable>kyrgyzstan</drawable>
-        <drawable>laos</drawable>
-        <drawable>latvia</drawable>
-        <drawable>lebanon</drawable>
-        <drawable>lesotho</drawable>
-        <drawable>liberia</drawable>
-        <drawable>libya</drawable>
-        <drawable>liechtenshein</drawable>
-        <drawable>lithuania</drawable>
-        <drawable>luxembourg</drawable>
-        <drawable>macedonia</drawable>
-        <drawable>madagascar</drawable>
-        <drawable>malawi</drawable>
-        <drawable>malaysia</drawable>
-        <drawable>maldives</drawable>
-        <drawable>mali</drawable>
-        <drawable>malta</drawable>
-        <drawable>mauritania</drawable>
-        <drawable>mauritius</drawable>
-        <drawable>mexico</drawable>
-        <drawable>moldova</drawable>
-        <drawable>monaco</drawable>
-        <drawable>mongolia</drawable>
-        <drawable>montenegro</drawable>
-        <drawable>morocco</drawable>
-        <drawable>mozambique</drawable>
-        <drawable>myanmar</drawable>
-        <drawable>namibia</drawable>
-        <drawable>nauru</drawable>
-        <drawable>nepal</drawable>
-        <drawable>netherlands</drawable>
-        <drawable>new-zealand</drawable>
-        <drawable>nicaragua</drawable>
-        <drawable>niger</drawable>
-        <drawable>nigeria</drawable>
-        <drawable>norway</drawable>
-        <drawable>oman</drawable>
-        <drawable>pakistan</drawable>
-        <drawable>palau</drawable>
-        <drawable>palestine</drawable>
-        <drawable>panama</drawable>
-        <drawable>papua-new-guinea</drawable>
-        <drawable>paraguay</drawable>
-        <drawable>peru</drawable>
-        <drawable>philippines</drawable>
-        <drawable>poland</drawable>
-        <drawable>portugal</drawable>
-        <drawable>qatar</drawable>
-        <drawable>romania</drawable>
-        <drawable>russian-federation</drawable>
-        <drawable>rwanda</drawable>
-        <drawable>st-kitts-nevis</drawable>
-        <drawable>saint-lucia</drawable>
-        <drawable>st-vincent-the-grenadines</drawable>
-        <drawable>samoa</drawable>
-        <drawable>san-marino</drawable>
-        <drawable>sao-tome-principe</drawable>
-        <drawable>saudi-arabia</drawable>
-        <drawable>senegal</drawable>
-        <drawable>serbia-yugoslavia</drawable>
-        <drawable>seychelles</drawable>
-        <drawable>sierra-leone</drawable>
-        <drawable>singapore</drawable>
-        <drawable>slovakia</drawable>
-        <drawable>slovenia</drawable>
-        <drawable>solomon-islands</drawable>
-        <drawable>somalia</drawable>
-        <drawable>south-africa</drawable>
-        <drawable>spain</drawable>
-        <drawable>sri-lanka</drawable>
-        <drawable>sudan</drawable>
-        <drawable>suriname</drawable>
-        <drawable>swaziland</drawable>
-        <drawable>sweden</drawable>
-        <drawable>switzerland</drawable>
-        <drawable>syria</drawable>
-        <drawable>taiwan</drawable>
-        <drawable>tajikistan</drawable>
-        <drawable>tanzania</drawable>
-        <drawable>thailand</drawable>
-        <drawable>togo</drawable>
-        <drawable>tonga</drawable>
-        <drawable>trinidad-tobago</drawable>
-        <drawable>tunisia</drawable>
-        <drawable>turkey</drawable>
-        <drawable>turkmenistan</drawable>
-        <drawable>tuvalu</drawable>
-        <drawable>uganda</drawable>
-        <drawable>ukraine</drawable>
-        <drawable>united-arab-emirates</drawable>
-        <drawable>united-kingdom</drawable>
-        <drawable>usa</drawable>
-        <drawable>uruguay</drawable>
-        <drawable>uzbekistan</drawable>
-        <drawable>vanutau</drawable>
-        <drawable>vatican-city</drawable>
-        <drawable>venezuela</drawable>
-        <drawable>vietnam</drawable>
-        <drawable>western-sahara</drawable>
-        <drawable>yemen</drawable>
-        <drawable>zambia</drawable>
-        <drawable>zimbabwe</drawable>
+        <item>@drawable/afghanistan</item>
+        <item>@drawable/albania</item>
+        <item>@drawable/algeria</item>
+        <item>@drawable/andorra</item>
+        <item>@drawable/angola</item>
+        <item>@drawable/antigua_barbuda</item>
+        <item>@drawable/argentina</item>
+        <item>@drawable/armenia</item>
+        <item>@drawable/australia</item>
+        <item>@drawable/austria</item>
+        <item>@drawable/azerbaijan</item>
+        <item>@drawable/bahamas</item>
+        <item>@drawable/bahrain</item>
+        <item>@drawable/bangladesh</item>
+        <item>@drawable/barbados</item>
+        <item>@drawable/belarus</item>
+        <item>@drawable/belgium</item>
+        <item>@drawable/belize</item>
+        <item>@drawable/benin</item>
+        <item>@drawable/bhutan</item>
+        <item>@drawable/bolivia</item>
+        <item>@drawable/bosnia_herzegovina</item>
+        <item>@drawable/botswana</item>
+        <item>@drawable/brazil</item>
+        <item>@drawable/brunei</item>
+        <item>@drawable/bulgaria</item>
+        <item>@drawable/burkina_faso</item>
+        <item>@drawable/burundi</item>
+        <item>@drawable/cambodia</item>
+        <item>@drawable/cameroon</item>
+        <item>@drawable/canada</item>
+        <item>@drawable/cape_verde</item>
+        <item>@drawable/central_african_republic</item>
+        <item>@drawable/chad</item>
+        <item>@drawable/chile</item>
+        <item>@drawable/china</item>
+        <item>@drawable/colombia</item>
+        <item>@drawable/comoros</item>
+        <item>@drawable/congo_brazzaville</item>
+        <item>@drawable/congo_kinshasa_zaire</item>
+        <item>@drawable/costa_rica</item>
+        <item>@drawable/cote_d_ivoire</item>
+        <item>@drawable/croatia</item>
+        <item>@drawable/cuba</item>
+        <item>@drawable/cyprus</item>
+        <item>@drawable/czech_republic</item>
+        <item>@drawable/denmark</item>
+        <item>@drawable/djibouti</item>
+        <item>@drawable/dominica</item>
+        <item>@drawable/dominican_republic</item>
+        <item>@drawable/ecuador</item>
+        <item>@drawable/egypt</item>
+        <item>@drawable/el_salvador</item>
+        <item>@drawable/equatorial_guinea</item>
+        <item>@drawable/eritrea</item>
+        <item>@drawable/estonia</item>
+        <item>@drawable/ethiopia</item>
+        <item>@drawable/fiji</item>
+        <item>@drawable/finland</item>
+        <item>@drawable/france</item>
+        <item>@drawable/gabon</item>
+        <item>@drawable/gambia</item>
+        <item>@drawable/georgia</item>
+        <item>@drawable/germany</item>
+        <item>@drawable/ghana</item>
+        <item>@drawable/greece</item>
+        <item>@drawable/grenada</item>
+        <item>@drawable/guatemala</item>
+        <item>@drawable/guinea</item>
+        <item>@drawable/guinea_bissau</item>
+        <item>@drawable/guyana</item>
+        <item>@drawable/haiti</item>
+        <item>@drawable/honduras</item>
+        <item>@drawable/hungary</item>
+        <item>@drawable/iceland</item>
+        <item>@drawable/india</item>
+        <item>@drawable/indonezia</item>
+        <item>@drawable/iran</item>
+        <item>@drawable/iraq</item>
+        <item>@drawable/ireland</item>
+        <item>@drawable/israel</item>
+        <item>@drawable/italy</item>
+        <item>@drawable/jamaica</item>
+        <item>@drawable/japan</item>
+        <item>@drawable/jordan</item>
+        <item>@drawable/kazakhstan</item>
+        <item>@drawable/kenya</item>
+        <item>@drawable/kiribati</item>
+        <item>@drawable/kuwait</item>
+        <item>@drawable/kyrgyzstan</item>
+        <item>@drawable/laos</item>
+        <item>@drawable/latvia</item>
+        <item>@drawable/lebanon</item>
+        <item>@drawable/lesotho</item>
+        <item>@drawable/liberia</item>
+        <item>@drawable/libya</item>
+        <item>@drawable/liechtenshein</item>
+        <item>@drawable/lithuania</item>
+        <item>@drawable/luxembourg</item>
+        <item>@drawable/macedonia</item>
+        <item>@drawable/madagascar</item>
+        <item>@drawable/malawi</item>
+        <item>@drawable/malaysia</item>
+        <item>@drawable/maldives</item>
+        <item>@drawable/mali</item>
+        <item>@drawable/malta</item>
+        <item>@drawable/mauritania</item>
+        <item>@drawable/mauritius</item>
+        <item>@drawable/mexico</item>
+        <item>@drawable/moldova</item>
+        <item>@drawable/monaco</item>
+        <item>@drawable/mongolia</item>
+        <item>@drawable/montenegro</item>
+        <item>@drawable/morocco</item>
+        <item>@drawable/mozambique</item>
+        <item>@drawable/myanmar</item>
+        <item>@drawable/namibia</item>
+        <item>@drawable/nauru</item>
+        <item>@drawable/nepal</item>
+        <item>@drawable/netherlands</item>
+        <item>@drawable/new_zealand</item>
+        <item>@drawable/nicaragua</item>
+        <item>@drawable/niger</item>
+        <item>@drawable/nigeria</item>
+        <item>@drawable/norway</item>
+        <item>@drawable/oman</item>
+        <item>@drawable/pakistan</item>
+        <item>@drawable/palau</item>
+        <item>@drawable/palestine</item>
+        <item>@drawable/panama</item>
+        <item>@drawable/papua_new_guinea</item>
+        <item>@drawable/paraguay</item>
+        <item>@drawable/peru</item>
+        <item>@drawable/philippines</item>
+        <item>@drawable/poland</item>
+        <item>@drawable/portugal</item>
+        <item>@drawable/qatar</item>
+        <item>@drawable/romania</item>
+        <item>@drawable/russian_federation</item>
+        <item>@drawable/rwanda</item>
+        <item>@drawable/st_kitts_nevis</item>
+        <item>@drawable/saint_lucia</item>
+        <item>@drawable/st_vincent_the_grenadines</item>
+        <item>@drawable/samoa</item>
+        <item>@drawable/san_marino</item>
+        <item>@drawable/sao_tome_principe</item>
+        <item>@drawable/saudi_arabia</item>
+        <item>@drawable/senegal</item>
+        <item>@drawable/serbia_yugoslavia</item>
+        <item>@drawable/seychelles</item>
+        <item>@drawable/sierra_leone</item>
+        <item>@drawable/singapore</item>
+        <item>@drawable/slovakia</item>
+        <item>@drawable/slovenia</item>
+        <item>@drawable/solomon_islands</item>
+        <item>@drawable/somalia</item>
+        <item>@drawable/south_africa</item>
+        <item>@drawable/spain</item>
+        <item>@drawable/sri_lanka</item>
+        <item>@drawable/sudan</item>
+        <item>@drawable/suriname</item>
+        <item>@drawable/swaziland</item>
+        <item>@drawable/sweden</item>
+        <item>@drawable/switzerland</item>
+        <item>@drawable/syria</item>
+        <item>@drawable/taiwan</item>
+        <item>@drawable/tajikistan</item>
+        <item>@drawable/tanzania</item>
+        <item>@drawable/thailand</item>
+        <item>@drawable/togo</item>
+        <item>@drawable/tonga</item>
+        <item>@drawable/trinidad_tobago</item>
+        <item>@drawable/tunisia</item>
+        <item>@drawable/turkey</item>
+        <item>@drawable/turkmenistan</item>
+        <item>@drawable/tuvalu</item>
+        <item>@drawable/uganda</item>
+        <item>@drawable/ukraine</item>
+        <item>@drawable/united_arab_emirates</item>
+        <item>@drawable/united_kingdom</item>
+        <item>@drawable/usa</item>
+        <item>@drawable/uruguay</item>
+        <item>@drawable/uzbekistan</item>
+        <item>@drawable/vanutau</item>
+        <item>@drawable/vatican_city</item>
+        <item>@drawable/venezuela</item>
+        <item>@drawable/vietnam</item>
+        <item>@drawable/western_sahara</item>
+        <item>@drawable/yemen</item>
+        <item>@drawable/zambia</item>
+        <item>@drawable/zimbabwe</item>
     </string-array>
 
 </resources>
